# mbl-core

./: .clang-tidy  .gitignore  .mbl-licensing-checker  CONTRIBUTING.md  LICENSE.md  README.md  tmp1.code-workspace
cloud-services/mbl-cloud-client/: .clang-format  .cproject  .project  CMakeLists.txt  CMakeLists__bk.txt  CMakeLists_cc.txt  CMakeLists_gtest.txt  CONTRIBUTING.md  Dockerfile  README.md  client-builder.py  code-checkers-readme.md  define.txt  main.cpp  mbed-cloud-client.lib  mbed_cloud_client_user_config.h  mbedtls_mbed_client_config.h  sotp_fs_config_linux.h
cloud-services/mbl-cloud-client/cloud-provisioning/: CMakeLists.txt  MblCloudProvisioning.cpp  MblCloudProvisioning.h  main.cpp  provisioning.cpp  provisioning.h
cloud-services/mbl-cloud-client/code-checkers/: code-check.cmake  code-checkers-readme.md
cloud-services/mbl-cloud-client/pal-platform/: .gitignore  .mbl-licensing-checker  PULL_REQUEST_TEMPLATE  README.md  mbedCloudClientCmake.txt  pal-platform-buildSystem.md  pal-platform-newPort.md  pal-platform-util.md  pal-platform.py  platform.cmake  requirements.txt
cloud-services/mbl-cloud-client/pal-platform/Device/OpenWRT_Generic/: OpenWRT_Generic.cmake
cloud-services/mbl-cloud-client/pal-platform/Device/Yocto_Generic/: Yocto_Generic.cmake
cloud-services/mbl-cloud-client/pal-platform/Middleware/mbedtls/: mbedtls.cmake  pal_mbedtls_config.h
cloud-services/mbl-cloud-client/pal-platform/Middleware/sdmmc_2.0.0/: sdmmc_2.0.0.cmake
cloud-services/mbl-cloud-client/pal-platform/OS/Linux_Native/: Linux_Native.cmake
cloud-services/mbl-cloud-client/pal-platform/OS/Linux_OpenWRT/: Linux_OpenWRT.cmake
cloud-services/mbl-cloud-client/pal-platform/OS/Linux_Yocto_v2.2/: Linux_Yocto_v2.2.cmake
cloud-services/mbl-cloud-client/pal-platform/SDK/K64F_FreeRTOS/: .gitignore  K64F_FreeRTOS.cmake
cloud-services/mbl-cloud-client/pal-platform/Toolchain/ARMCC/: ARMCC-ASM.cmake  ARMCC-C.cmake  ARMCC-CXX.cmake  ARMCC-flags.cmake  ARMCC.cmake
cloud-services/mbl-cloud-client/pal-platform/Toolchain/ARMGCC/: ARMGCC-flags.cmake  ARMGCC.cmake  armgcc_force_cpp.cmake
cloud-services/mbl-cloud-client/pal-platform/Toolchain/GCC/: GCC-flags.cmake
cloud-services/mbl-cloud-client/pal-platform/Toolchain/GCC-OPENWRT/: GCC-OPENWRT.cmake
cloud-services/mbl-cloud-client/pal-platform/Toolchain/POKY-GLIBC/: POKY-GLIBC-flags.cmake  POKY-GLIBC.cmake
cloud-services/mbl-cloud-client/scripts/: CMakeLists.txt  apps_installer.sh  arm_update_activate.sh  arm_update_active_details.sh  arm_update_common.sh  arm_update_common.sh.in  boot_partition_installer.sh  bootloader_installer.sh  rootfs_installer.sh  swupdate_handlers.lua  wait_for_app_update.sh
cloud-services/mbl-cloud-client/source/: MblCloudClient.cpp  MblCloudClient.h  MblError.cpp  MblError.h  MblMutex.cpp  MblMutex.h  MblScopedLock.cpp  MblScopedLock.h  application_init.cpp  application_init.h  callbacks.cpp  jsoncpp.cpp  log.cpp  log.h  monotonic_time.cpp  monotonic_time.h  signals.cpp  signals.h  update_handlers.cpp  update_handlers.h
cloud-services/mbl-cloud-client/source/cloud-connect-resource-broker/: ApplicationEndpoint.cpp  ApplicationEndpoint.h  CMakeLists.txt  CloudConnectCommon_Internal.h  CloudConnectExternalTypes.c  CloudConnectExternalTypes.h  CloudConnectTrace.h  CloudConnectTypes.cpp  CloudConnectTypes.h  DBusAdapter.cpp  DBusAdapter.h  DBusAdapter.hpp  DBusAdapterCommon.cpp  DBusAdapterCommon.h  DBusAdapter_Impl.cpp  DBusAdapter_Impl.h  DBusCloudConnectNames.h  DBusMessage.cpp  DBusMessage.h  DBusMessagesFactory.cpp  DBusMessagesFactory.h  DBusService.c  DBusService.h  Event.cpp  Event.h  EventImmediate.cpp  EventImmediate.h  EventManager.cpp  EventManager.h  EventPeriodic.cpp  EventPeriodic.h  M2MResourceObjects.cpp  M2MResourceObjects.h  Mailbox.cpp  Mailbox.h  MailboxMsg.cpp  MailboxMsg.h  MbedClientManager.cpp  MbedClientManager.h  MblCloudConnectIpcDBus.cpp  (+19 more)
cloud-services/mbl-cloud-client/source/json/: json-forwards.h  json.h
cloud-services/mbl-cloud-client/tests/g-tests/: CMakeLists.txt  README.md  main.cpp  string-compare.cpp
cloud-services/mbl-cloud-client/tests/gtest/: CMakeLists.txt  DBusAdapterMessageReplyTests.cpp  DBusAdapterMessagingBasicTests.cpp  DBusAdapterMock.cpp  DBusAdapterMock.h  DBusAdapterTests.cpp  README.md  RegistrationRecordTester.cpp  RegistrationRecordTester.h  RegistrationRecord_test.cpp  ResourceBrokerMockBase.cpp  ResourceBrokerMockBase.h  ResourceBrokerTester.cpp  ResourceBrokerTester.h  ResourceBroker_get_resource_value_test.cpp  ResourceBroker_register_test.cpp  ResourceBroker_set_resource_value_test.cpp  ResourceBroker_test.cpp  ResourceDefinitionJson.h  ResourceDefinitionParser_test.cpp  TestInfra.h  TestInfraAppThread.cpp  TestInfraAppThread.h  TestInfraCommon.h  TestInfra_DBusAdapterTester.cpp  TestInfra_DBusAdapterTester.h  main.cpp
cloud-services/mbl-cloud-client/tests/gtests/: CMakeLists.txt  string-compare.cpp
cloud-services/mbl-cloud-client/tests/mbl-app-lifecycle/: .mbl-licensing-checker  README.md  requirements.txt  setup.py
firmware-management/mbl-watchdog-init/: CMakeLists.txt  mbl-watchdog-init.c
firmware-management/swupdate-handlers/: CMakeLists.txt  arm-handler-common.c  arm-handler-common.h.in  arm-handlers.c  rootfs-handler.c  rootfs-handler.h
firmware-management/swupdate-handlers/include/: arm-handler-common.h.in
firmware-management/updated/: .clang-tidy  CMakeLists.txt  init.cpp  updated.cpp
firmware-management/updated/logging/: logger.h
firmware-management/updated/updated/: CMakeLists.txt
firmware-management/updated/updated-client/: CMakeLists.txt
firmware-management/updated/updated-client/source/: updated-client.cpp  updated-get-status.cpp  updated-start-update.cpp
firmware-management/updated/updated-rpc/: CMakeLists.txt
firmware-management/updated/updated-rpc/source/: Error.cpp  config.cpp
firmware-management/updated/updated/source/: Manifest.h  UpdateCoordinator.cpp  UpdateCoordinator.h  cli.h  init.cpp  init.h  sig.cpp  sig.h  signal.cpp  signal.h  updated.cpp
firmware-management/updated/updated/source/daemon/: init.h  (+1 more)
(+348 files in other folders)
